fixed some nav and header alignments

--- a/css/main.css
+++ b/css/main.css
@@ -23,6 +23,7 @@ h3{
 
 
 ul {
+    width: 100%;
     list-style-type: none;
     margin: 0;
     padding: 0;
@@ -35,11 +36,12 @@ ul li {
 }
 
 ul li a.header {
-    margin-left: 20px;
+    width: 100%;
+    margin-left: 30px;
     display: block;
     color: white;
     text-align: center;
-    padding:10px 70px ;
+    padding:15px 70px ;
     text-decoration: none;
 }
 
@@ -51,19 +53,19 @@ ul li a.header:hover:not(.active) {
 .active {
     background-color: #4CAF50;
         }	
-nav {
-    font-size: 30px;
-    
+nav { 
     list-style-type: none;
     line-height:30px;
     background-color:whitesmoke;
     height:100%;
-    width:210px;
-    overflow: scroll;
+    width:auto;
+    overflow: hidden;
     float: left;
-    padding:5px; 
+    padding:; 
 }
+.nav:hover{}
 nav li a.nav{
+    font-size: 20px;
     color: black;
     text-align: left;
     text-decoration: none;
